@@ -115,6 +115,7 @@ conditions:
 .IP "19 Version mismatch error"
 .IP "20 EXEC error"
 .IP "21 File lock error"
+.IP "22 Memory allocation error"
 .PP
 .SH SIGNAL HANDLING
 Please note that due to mmap issues, aide cannot be terminated with
