@@ -43,6 +43,7 @@
 #include "log.h"
 #include "db_config.h"
 #include "util.h"
+#include "errorcodes.h"
 
 #define URL_UNSAFE " <>\"#%{}|\\^~[]`@:\033'"
 #define ISPRINT(c) (isascii(c) && isprint(c))
@@ -55,7 +56,7 @@ void* checked_malloc(size_t size) {
     void * p = malloc(size);
     if (p == NULL) {
         log_msg(LOG_LEVEL_ERROR, "malloc: failed to allocate %d bytes of memory", size);
-        exit(EXIT_FAILURE);
+        exit(MEMORY_ALLOCATION_FAILURE);
     }
     return p;
 }
@@ -63,7 +64,7 @@ void* checked_calloc(size_t nmemb, size_t size) {
     void * p = calloc(nmemb, size);
     if (p == NULL) {
         log_msg(LOG_LEVEL_ERROR, "calloc: failed to allocate %d bytes of memory", size);
-        exit(EXIT_FAILURE);
+        exit(MEMORY_ALLOCATION_FAILURE);
     }
     return p;
 }
@@ -71,7 +72,7 @@ void* checked_strdup(const char *s) {
     void * p = strdup(s);
     if (p == NULL) {
         log_msg(LOG_LEVEL_ERROR, "strdup: failed to allocate memory");
-        exit(EXIT_FAILURE);
+        exit(MEMORY_ALLOCATION_FAILURE);
     }
     return p;
 }
@@ -79,7 +80,7 @@ void* checked_strndup(const char *s, size_t size) {
     void * p = strndup(s, size);
     if (p == NULL) {
         log_msg(LOG_LEVEL_ERROR, "strdup: failed to allocate memory");
-        exit(EXIT_FAILURE);
+        exit(MEMORY_ALLOCATION_FAILURE);
     }
     return p;
 }
@@ -87,7 +88,7 @@ void* checked_realloc(void *ptr, size_t size) {
     void * p = realloc(ptr,size);
     if (p == NULL) {
         log_msg(LOG_LEVEL_ERROR, "realloc: failed to allocate memory");
-        exit(EXIT_FAILURE);
+        exit(MEMORY_ALLOCATION_FAILURE);
     }
     return p;
 }
