@@ -1,3 +1,6 @@
+2022-08-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Add exit code 22 for memory allocation errors
+
 2022-08-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Improve some logging
 
